# Meadowlark

./: .gitignore  Cargo.toml  DESIGN_DOC.md  DSP_DESIGN_DOC.md  DesignDoc.md  MVP_DESIGN_DOC.md  README.md  UI_WORKFLOW.md  UX_DESIGN_DOC.md  build.rs  install_resources.sh  project.json  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  build_test.yml
assets/design/: state_management_system
assets/fonts/fira-sans-condensed/: SIL Open Font License.txt
assets/fonts/inter/: SIL Open Font License.txt
assets/icons/licenses_and_guidelines/: FontAudio License.txt  Meadowlark Icon Guidelines.md
assets/test_files/synth_keys/: synth_keys_44100_16bit.wav.asd
crates/backend/: Cargo.toml
docs/: PLUGIN_DSP_DESIGN_DOC.md
engine/: Cargo.toml
engine/src/: graph.rs  lib.rs  plugin_scanner.rs  processor_schedule.rs
engine/src/engine/: audio_thread.rs  error.rs  main_thread.rs  mod.rs  modify_request.rs  process_thread.rs  settings.rs  tempo_map.rs  timer_wheel.rs
engine/src/graph/: compiler.rs  error.rs
engine/src/graph/compiler/: delay_comp_task.rs  graph_in_out_task.rs  plugin_task.rs  sum_task.rs  verifier.rs
engine/src/graph/compiler/plugin_task/: loaded_plugin_task.rs  unloaded_plugin_task.rs
engine/src/graph/shared_pools/: buffer_pool.rs  delay_comp_node_pool.rs  mod.rs  plugin_host_pool.rs  shared_schedule.rs  transport_pool.rs
engine/src/plugin_host/: channel.rs  error.rs  event_io_buffers.rs  main_thread.rs  mod.rs  processor.rs  save_state.rs
engine/src/plugin_host/event_io_buffers/: sanitizer.rs
engine/src/plugin_host/main_thread/: sync_ports.rs
engine/src/plugin_scanner/: missing_plugin.rs
engine/src/processor_schedule/: tasks.rs
engine/src/processor_schedule/tasks/: graph_in_out_task.rs  plugin_task.rs  transport_task.rs  unloaded_plugin_task.rs
engine/src/processor_schedule/tasks/delay_comp_task/: audio_delay_comp.rs  automation_delay_comp.rs  mod.rs  note_delay_comp.rs
engine/src/processor_schedule/tasks/sum_task/: audio_sum_task.rs  automation_sum_task.rs  mod.rs  note_sum_task.rs
engine/src/processor_schedule/tasks/transport_task/: declick.rs
engine/src/utils/: mod.rs  reducing_queue.rs  thread_id.rs
images/: state_management_system
plugin-api/: Cargo.toml
plugin-api/src/: atomic_float.rs  automation.rs  buffer.rs  descriptor.rs  factory.rs  host_info.rs  host_request_channel.rs  instance_id.rs  lib.rs  main_thread.rs  param_helper.rs  process_info.rs  processor.rs
plugin-api/src/ext/: audio_ports.rs  gui.rs  mod.rs  note_ports.rs  params.rs  timer.rs
plugin-api/src/param_helper/: declick.rs  smooth.rs
plugin-api/src/transport/: declick.rs  mod.rs
resources/: resources.gresource.xml
resources/css/: default-dark.css  font-sizes-macos.css  font-sizes.css
src/: config.rs  main.rs  state.rs  state_system.rs  system_io.rs
src/backend/: audio_clip.rs  audio_clip_renderer.rs  core_handle.rs  cpu_id.rs  engine_handle.rs  handle.rs  hardware_io.rs  mod.rs  project_state.rs  resource_loader.rs  rt_thread.rs  sample_browser_plug.rs  save_state.rs  state.rs  system_io.rs  timeline_track_plug.rs
src/backend/audio_clip/: mod.rs  pcm_resource.rs
src/backend/audio_graph/: mod.rs  resource_pool.rs  schedule.rs
src/backend/dsp/: mod.rs
src/backend/generic_nodes/: gain.rs  mix.rs  mod.rs  monitor.rs  pan.rs  sample_delay.rs  sine_gen.rs  sum.rs
src/backend/graph/: audio_buffer.rs  graph_state.rs  mod.rs  node.rs  resource_pool.rs  schedule.rs  task.rs
src/backend/graph_interface/: graph_state.rs  mod.rs  node.rs  resource_pool.rs  schedule.rs
src/backend/graph_state/: graph.rs  mod.rs  node.rs  pool.rs  resource_pool.rs  schedule.rs
src/backend/nodes/: gain.rs  sum.rs
src/backend/parameter/: declick.rs  mod.rs  smooth.rs
src/backend/pcm/: loader.rs  mod.rs
src/backend/project_interface/: mod.rs
src/backend/project_state/: mod.rs
src/backend/resource_loader/: mod.rs
src/backend/timeline/: audio_clip.rs  mod.rs  sampler.rs  save_state.rs  state.rs  tempo_map.rs  timeline_track_node.rs  transport.rs
src/backend/timeline_track/: mod.rs
src/backend/timeline_track_plug/: mod.rs
src/backend_layer/: mod.rs
src/engine_handle/: mod.rs  system_io.rs
src/frontend/: buffer_pool.rs  mod.rs  node_pool.rs  schedule.rs
src/frontend/graph/: mod.rs
src/frontend/node/: gain.rs  mod.rs  monitor.rs  sine_gen.rs
src/frontend/nodes/: gain.rs  master_out.rs  mod.rs  monitor.rs  sine_gen.rs
src/frontend_state/: mod.rs  parameter.rs  smooth.rs
src/frontend_state/nodes/: gain.rs  mod.rs  monitor.rs  pan.rs  sine_gen.rs  sum.rs
src/frontend_state/parameter/: declick.rs  mod.rs  smooth.rs
src/graph_state/: graph.rs  mod.rs  resource_pool.rs  schedule.rs
src/gui/: fonts.rs  icons copy.rs  icons.rs  main_window.rs  mod.rs
src/gui/main_window/: top_panel.rs
src/gui/styling/: mod.rs  style.rs  theme.rs
src/plugins/: mod.rs  sample_browser_plug.rs  timeline_track_plug.rs
src/program_layer/: mod.rs
src/resource/: mod.rs  resource_loader.rs
src/rt_backend/: mod.rs
src/rt_thread/: mod.rs  rt_handler.rs
src/shared_state/: graph.rs  mod.rs  node.rs  resource_pool.rs  schedule.rs
src/state/: action.rs  action_handler.rs  app_message.rs  bound_gui_state.rs  event.rs  mod.rs  project_save_state.rs  state_system.rs  state_system_imp.rs
src/state_system/: actions.rs  app_message.rs  bound_ui_state.rs  browser_panel_state.rs  connect_actions.rs  derived_state.rs  engine_handle.rs  events.rs  mod.rs  track_header_state.rs  working_state.rs
src/ui/: about_dialog.rs  app_data.rs  app_event.rs  bottom_bar.rs  browser_panel.rs  clip.rs  default_dark.css  icon.rs  icons.rs  keymap.rs  loop_region.rs  main_window_menu_bar.rs  mod.rs  side_bar_tabs.rs  tempo_controls.rs  theme.css  timeline_grid.rs  timeline_panel.rs  timeline_view.rs  top_bar.rs  track.rs  track_controls.rs  tracks_panel.rs  transport_controls.rs  waveform.rs
src/ui_layer/: app_data.rs  app_event.rs  mod.rs
src/util/: atomic_float.rs  decibel.rs  mod.rs  twox_hash_map.rs
test_files/synth_keys/: synth_keys_48000.flac
(+174 files in other folders)
