[package]
name = "meadowlark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
toml = "0.8.20"
log = { version = "0.4", features = ["max_level_debug"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["rayon", "ico", "png"] }

[dependencies.vizia]
git = "https://github.com/vizia/vizia"
rev = "7e9aaa004e9e4f7bfd42d7993cc98ab9279831ee"
default-features = false
features = ["winit", "clipboard", "x11", "wayland", "accesskit"]

[profile.dev]
opt-level = 1

[profile.release]
strip = true
codegen-units = 1
lto = "thin"