[package]
name = "meadowlark-engine"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meadowlark-plugin-api = { path = "../plugin-api" }
audio-graph = { git = "https://github.com/MeadowlarkDAW/audio-graph", rev = "39a347ca8b00b092139728129c089b472b93ea8a" }
clack-host = { git = "https://github.com/prokopyl/clack", rev = "31d247c00ddc228bc0a395c50f0738b3c91f409c" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["clack-host", "audio-ports", "gui", "log", "note-ports", "params", "state", "thread-check", "latency", "timer"], rev = "31d247c00ddc228bc0a395c50f0738b3c91f409c" }
basedrop = "0.1"
smallvec = { version = "1.9.0", features = ["const_generics", "union"] }
bitflags = "1.3"
rtrb = "0.2"
atomic_refcell = "0.1"
fnv = "1.0"
log = "0.4"
thread-priority = "0.10"
raw-window-handle = "0.4.2"
hierarchical_hash_wheel_timer = "1.1.0"
cpal = "0.14"
dirs = "4.0"
walkdir = "2.3.2"

[target.'cfg(windows)'.dependencies]
spin_sleep = "1.1"